fix: Update project name and React dependencies
The project name in package.json and metadata.json has been corrected to "funport-skating-club". React dependencies were updated to the latest version.

Additionally, minor adjustments were made to the CSS to align with the new branding and improve overall styling. The Google Fonts link in index.html was also updated to reflect the new Poppins font weights.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "funpot-skating-club-management",
+  "name": "funport-skating-club",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
