--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "funport-skating-club",
   "private": true,
@@ -6,10 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -19,7 +16,6 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
-    "gh-pages": "^6.1.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
